fixed some spacing
Former-commit-id: 7916e6095b82fcb6a2e0325cf76ffa6124c8e3b7

--- a/css/style.css
+++ b/css/style.css
@@ -515,8 +515,8 @@ footer > .row > div:not(:first-child){
 }
 
 .compdesc h6 {
-    margin-top: 5px;
-    margin-bottom: 50px;
+    margin-top: 30px;
+    margin-bottom: 90px;
     padding-left: 15%;
     padding-right: 15%;
     text-align: center;
